--- a/website/website/package.json
+++ b/website/website/package.json
@@ -17,11 +17,15 @@
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^6.1.0",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-table": "^8.12.0",
     "@types/react": "^18.2.51",
     "@types/react-dom": "^18.2.18",
     "astro": "^4.3.0",
@@ -29,6 +33,7 @@
     "balance-text": "^3.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.299.0",
